# NeedlemanOpenmp

./: CMakeLists.txt  README.md  main.cpp  rpt.txt
